# DREAMARK

Anti-Matthew FL (ECAI 2024)/: dataload.py  examples.md  main.py  models.py  utils.py
Anti-Matthew FL (ECAI 2024)/Solver/: co_opt.py  mco_opt.py  min_norm_solvers.py  qp_opt.py
Anti-Matthew FL (ECAI 2024)/fls/: effl.py  flbase.py
Authority Bias (ACL 2025)/: factool.py  follow-up.py  rewrite.py
Authority Bias in RAG(ACL 2025)/: CDEQ.py  evaluate.py  qdataset.py  result.py
Deep3DMark (AAAI 2024)/: .gitignore  LICENSE  README.md  debug.py  metrics.py  requirements.txt  train.py  util.py  visual.py
Deep3DMark (AAAI 2024)/config/: GAT8_2_2_1.yaml  channelae8_0.2.yaml  debug_wm.yaml
Deep3DMark (AAAI 2024)/dataset/: ModelNet.py  RandomBits.py  ShapeNet.py  __init__.py  hands.py  images.py
Deep3DMark (AAAI 2024)/model/: __init__.py  base.py  decoder.py  discriminator.py  encoder.py  encoder_decoder.py  gcn.py  grouping.py  noise.py  pointconv.py  pointnet.py  pointnet2.py
Deep3DMark (AAAI 2024)/model/backend/: .gitignore  CMakeLists.txt  __init__.py  backend_utils.py  main.cu  setup.py
Deep3DMark (AAAI 2024)/model/backend/_ext/include/: ball_query.h  crop.h  cuda_utils.h  geometry.h  group_points.h  interpolate.h  sampling.h  utils.h
Deep3DMark (AAAI 2024)/model/backend/_ext/src/: CMakeLists.txt  ball_query.cpp  ball_query_gpu.cu  bindings.cpp  crop.cpp  crop_gpu.cu  geometry.cpp  geometry_gpu.cu  group_points.cpp  group_points_gpu.cu  interpolate.cpp  sampling.cpp  sampling_gpu.cu  utils.cpp  utils_gpu.cu
Deep3DMark (AAAI 2024)/tasks/: ChannelAE.py  CoverOrStega.py  Watermark.py  __init__.py  base.py
DreaMark (AAAI 2025)/: README.md  attack.py  environment.yml  eval_metrics.py  main.py  run.sh  test.py  test.sh  train_hidden.py
Fairness_Stability (NeurIPS 2024)/: calculate_fairness_bound_mean.ipynb  calculate_fairness_bound_regression.ipynb
FuncMark (AAAI 2025)/: .gitignore  batch_experiment.py  common.py  create_sdf.py  environment.yml  experiment_on_TP.py  readme.md  util.py  watermark_mesh_then_sdf.py  watermark_sdf.py
GeWu/: README.md
NeuronSuppress (ACM MM 2025)/: StableDiffusionXL.py  diffusion_pipeline.ipynb  get_layer_data.py  main.py  stable_diffusion3.py  stable_diffusion3_px.py  stable_diffusion_bias.py
RAIMark (ACM MM 2024)/: README.md  finetune_function.py  generate.py  test_function.py  train_decoder.py  train_function.py
SCM-Projection (ACL Findings 2025)/: README.md
(+165 files in other folders)
